--- a/style.css
+++ b/style.css
@@ -4,9 +4,78 @@
 }
 
 body{
-    background: #9013fe;
-    color:white;
+    background: #7331ad;
+    display: flex;
+    justify-content: center;
+    height: 80vh;
+}
+.container{
+     background: white;
+     display: flex;
+     flex-direction: column;
+     width: 700px;
+     border-radius: 20px;
+     padding: 50px;
+     margin-top: 50px;
+}
+
+.container >.row{
+    width: 100%;
+   justify-content: space-evenly;
+}
+.row{
+    display: flex;
 }
 .col{
-     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
+.name{
+    margin: 20px 0;
+    font-size: x-large;
+    font-weight: bold;
+}
+.icon{
+    border-radius: 50%;
+    border: 1px solid beige;
+}
+.score{
+    font-size: x-large;
+    font-weight: bold;  
+}
+.score > span{
+    margin: 0 5px;
+}
+
+.goal-pnlt{
+    font-size: xx-large;
+    width: 200px;
+    justify-content: space-evenly;
+}
+
+#strike-button{
+    border:none;
+    border-radius: 25px;
+    font-size: large;
+    background: linear-gradient(135deg,#c02425,#f0cb35);
+    width: 300px;
+    color:white;
+    padding: 10px;
+    margin-top:50px;
+    margin-bottom:-50px;
+    outline:none;
+}
+#try-again{
+    border:none;
+    border-radius: 25px;
+    font-size: large;
+    background: linear-gradient(135deg,rgb(182, 10, 10),#ffd630);
+    width: 100px;
+    color:white;
+    padding: 10px;
+    margin-top:50px;
+    margin-bottom:-50px;
+    outline:none;
 }
